--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
-    <script src="https://kit.fontawesome.com/2cb25f2c39.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <nav class="nav">
-            <div class="logo"><a href="./index.html"><img src="./img/logo-monsterofrock.png" class="img"></a></div>
+            <div class="logo"><a href="./index.html"><img src="./img/logo-monsterofrock.png" class="img"
+                        alt="logo-monsterofrock"></a></div>
             <input type="checkbox" id="check">
             <label for="check" class="bar-btn">
                 <i class="fa-solid fa-bars"></i>
