--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -16,7 +16,8 @@
 <body>
     <header>
         <nav class="nav">
-            <div class="logo"><a href="../index.html"><img src="../img/logo-monsterofrock.png" class="img"></a></div>
+            <div class="logo"><a href="../index.html"><img src="../img/logo-monsterofrock.png" class="img"
+                        alt="logo-monsterofrock"></a></div>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../paginas/noticias.html">Noticias</a></li>
